# Desafio_Reto2

./: .dockerignore  .example_env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  scriptfile.ipynb  start.sh
app/: fast_main.py  streamlit_main.py
data/: EstacionesDeServicio#.csv  Plots_Admin.pptx  coches_procesado.csv  datos_combinados_combustibleEuskadi2022-2025.csv  df_combustible_ejemplo.txt  df_combustible_precios_euskadi_2022-2025.csv  df_vehiculos_procesado_kw.csv  estaciones_servicio_euskadi.csv  gasolineras_precios_limpio.csv  rutas.csv  tickets_combustible_euskadi_2022-2025.csv  usuarios.csv
data_Jaime/data/: datos_combinados.csv
data_Jaime/data/01/2019/01/: 01-01-2019.json  02-01-2019.json  03-01-2019.json
doc/: links.txt
doc/InformacionGeneral/: Desafío PT 2025 (Deiviator).pptx
models/: best_model.pkl  best_model2.pkl  feature_columns.pkl  feature_columns2.pkl
notebooks/: __Data_and_models.ipynb  coches_cv_to_db_aiven.ipynb  cv_to_db_aiven.ipynb
src/: DataSelection.ipynb
src/EstacionesServicio/: REST precio gasolineras.py
src/Vehiculos/: Coches_webScraping.py  limpieza de coches.py
