[project]
name = "desafio-ml-project"
version = "0.1.0"
description = "ML project with FastAPI and Streamlit"
requires-python = ">=3.12"
authors = [
    {name = "Your Team", email = "team@example.com"}
]
dependencies = [
    # Core ML/Data Science
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    
    # Deep Learning (choose one or both)
    #"torch>=2.0.0",
    #"tensorflow>=2.13.0",
    
    # Model training and evaluation
    "xgboost>=1.7.0",
    "lightgbm>=4.0.0",
    "optuna>=3.3.0",
    "mlflow>=2.5.0",
    
    # Data processing and visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    
    # File handling
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
    "h5py>=3.9.0",
    "pyarrow>=12.0.0",
    
    # API and Web
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "streamlit>=1.25.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    
    # Mapping and Geospatial - NEW
    "folium>=0.14.0",
    "streamlit-folium>=0.13.0",
    "googlemaps>=4.10.0",
    "polyline>=2.0.0",
    "shapely>=2.0.0",


    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "joblib>=1.3.0",
    "requests>=2.31.0",
    
    # Development and testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app/desafio_ml_project", "streamlit_app/desafio_ml_project"]